Edited bio description and corrected current Job title

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				</div>
 		  </div>
 
- <div class="name">I am Davies Omale Odu. I grew up in two towns in Central Nigeria - Makurdi and Abuja. I attended a catholic boarding high school Mount Saint Gabriel’s Secondary School, then went to college at St. Petersburg State Electrotechnical University. I have a Masters in Computer Engineering from Duke University, Durham NC.
+ <div class="name">I am Davies Omale Odu. I grew up in two towns in Central Nigeria - Makurdi and Abuja. I attended a catholic boarding high school Mount Saint Gabriel’s Secondary School, then went to college at St. Petersburg State Electrotechnical University, Russia. I have a Masters in Computer Engineering from Duke University, Durham NC.
  <br> <br>
 
 My education in Software Development is both formal and informal. I also have a large entrepreneurial spirit which I love to tap into when I can. I am constantly seeking to acquire and learn new technologies and skills. Right now I am a developer at Microsoft helping build <a href="https://www.microsoft.com/en-us/cloud-platform/microsoft-intune" target="_blank"><em>Microsoft Intune</em></a>. Prior to this I helped my friends at <a href = "https://twitter.com/releafgroup?lang=en" target="_blank" ><em> The Releaf Group</em></a> build an online platform that collects investment-focused data from private African companies, starting in Nigeria.
@@ -109,9 +109,9 @@ I believe technology drives economies and global development and I constantly ho
 	 <div class="exp" id="exp_ms">
 		  <div class="panel">
 				<div>
-					 <div class="name">Software Engineer Co-op</div>
-					 <div class="date">June-Dec, 2016</div>
-					 <div class="location">IBM, RTP</div>
+					 <div class="name">Software Engineer </div>
+					 <div class="date">June 2017 - Date</div>
+					 <div class="location">Microsoft, Silicon Valley campus</div>
 						  <div class="hidden">
 								<div class="divider"></div>
 								<ul class="desc">
