More social media handles added

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 								Software Developer
 						  </p>
 					<div class="links">
-						<a href="https://github.com/davodu">GitHub</a>
 						<a href="http://daviesodu.com/resume.pdf">Resume</a>
-						<a href="mailto:daviesodu@gmail.com">Email</a>
+						<a href="https://github.com/davodu">GitHub</a>
+						<a href="https://twitter.com/davoduuu">Twitter</a>
+						<a href="https://instagram.com/davodu">Instagram</a>
 					</div>
 					
 				</div>
