--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 My education in Software Development is both formal and informal. I also have a large entrepreneurial spirit which I love to tap into when I can. I am constantly seeking to acquire and learn new technologies and skills. Right now I am a developer at Microsoft helping build <a href="https://www.microsoft.com/en-us/cloud-platform/microsoft-intune" target="_blank"><em>Microsoft Intune</em></a>. Prior to this I helped my friends at <a href = "https://twitter.com/releafgroup?lang=en" target="_blank" ><em> The Releaf Group</em></a> build an online platform that collects investment-focused data from private African companies, starting in Nigeria.
 </br> <br>
-I believe technology drives economies and global development and I constantly hone the skills that would enable me someday change lives through technology. My focus will primarily be to empower the underserved.
+I believe technology drives economies and global development and quixotic though it may sound, I strive to constantly hone the skills that would enable me someday change lives through technology.
 
 </div>
 	 
