--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<div class="divider"></div>
 						<ul class="desc">
 							<li>
-								Product engineer working on various web technologies and Microservices.
+								Big Data Engineering and Analytics.
 							</li>
 						</ul>
 					</div>
@@ -188,8 +188,7 @@
 					<div class="hidden">
 						<div class="divider"></div>
 						<ul class="desc">
-							<li> Collaborated with 3 teammates to build software for a sun tracking solar panel circuit
-								using ATmega8 micro controller and automated solar panels as main components
+							<li> Built software for sun tracking solar panel powered by ATmega8 microcontroller.
 							</li>
 						</ul>
 					</div>
