--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="content-wrapper">
 						<h1>Davies Odu</h1>
 						<p class="my-summary">
-							Software Developer
+							"Live consciously, aware that each breath is a gift"
 						</p>
 						<div class="links">
 							<a href="http://daviesodu.com/resume.pdf">Resume</a>
