--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 							"Live consciously, aware that each breath is a gift"
 						</p>
 						<div class="links">
-							<a href="http://daviesodu.com/resume.pdf">Resume</a>
-							<a href="https://github.com/davodu">GitHub</a>
+							<a href="https://medium.com/@daviesodu">Medium</a>
 							<a href="https://twitter.com/davoduuu">Twitter</a>
 							<a href="https://instagram.com/davodu">Instagram</a>
 						</div>
