--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						</p>
 						<div class="links">
 							<a href="https://medium.com/@daviesodu">Medium</a>
+							<a href="https://linkedin.com/in/davodu">LinkedIn</a>
 							<a href="https://twitter.com/davoduuu">Twitter</a>
 							<a href="https://instagram.com/davodu">Instagram</a>
 						</div>
