--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 	<div class="arrow top">
 		<div class="icon"></div>
 		<span class="text">
-			<span class="normal">Education</span>
+			<span class="normal">Formal Education</span>
 			<span class="home">Home</span>
 		</span>
 	</div>
